samples/shrubbery/examples/failing/commaBadIndent.shrub
  (foo | bar: baz; fr0b
,bad)
